--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ future==0.18.2
 importlib-metadata==2.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
+python-slugify
 joblib==0.17.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
